# Ferride

./: .gitignore  .prettierignore  Cargo.toml  README.md  knip.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  turbo.jsonc
.github/workflows/: build.yaml  check.yaml
.husky/: pre-commit
apps/ferride/: eslint.config.js  knip.config.ts  package.json  prettier.config.js  tsconfig.json  turbo.jsonc
apps/ferride/src/: App.tsx  main.css  main.tsx  server-worker.ts
apps/ferride/src-tauri/: Cargo.toml  package.json  tauri.conf.json  turbo.jsonc
apps/ferride/src-tauri/src/: main.rs
apps/ferride/src/components/: Footer.tsx  FooterMenu.tsx  Header.tsx  HeaderMenu.tsx  Menu.tsx  ViewportRoot.tsx
