[workspace]
resolver = "3"
members = ["apps/ferride/src-tauri", "packages/ferride-wasm"]

[workspace.package]
authors = ["thatmisakidev@outlook.com"]
edition = "2021"

[workspace.dependencies]
# Internal packages
ferride-wasm = { path = "packages/ferride-wasm" }
# External packages
wasm-bindgen = "0.2.126"
