[package]
name = "ferride"
version = "0.1.0"
description = "An IDE for GB(C) development, built for assembly developers and power users."
authors.workspace = true
edition.workspace = true

[lib]
name = "ferride_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
